Remove javax.xml.bind usage